<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_background"
              android:orientation="vertical">

    <EditText
        android:id="@+id/path_to_file"
        style="@style/EditTextDefaultStyle"
        android:layout_width="match_parent"/>

    <Button
        android:id="@+id/select_path"
        style="@style/ButtonDefaultStyle"
        android:layout_width="wrap_content"
        android:text="@string/select_file"/>

    <Button
        android:id="@+id/calculate_square"
        style="@style/ButtonDefaultStyle"
        android:layout_width="wrap_content"
        android:text="@string/calculate_square"/>

    <TextView
        style="@style/TextViewDefaultStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"/>

    <TextView
        android:id="@+id/result"
        style="@style/EditTextDefaultStyle"
        android:layout_width="match_parent"
        android:singleLine="true"/>
</LinearLayout>