<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_background"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridView
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="@dimen/text_margin_default"
                android:background="@color/grid_color"
                android:horizontalSpacing="1dp"
                android:numColumns="6"
                android:stretchMode="columnWidth"
                android:verticalSpacing="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttons_layout"
                android:visibility="gone">

                <Button
                    android:id="@+id/simple_ppm_btn_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Reset" />

                <Button
                    android:id="@+id/simple_ppm_btn_addRow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add row" />

                <Button
                    android:id="@+id/generate_csv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Generate table (table.csv)"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/calculate_ppm_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_default"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewDefaultStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_avg_square"/>

                    <EditText
                        android:id="@+id/avg_value"
                        style="@style/EditTextDefaultStyle"
                        android:layout_width="match_parent"
                        android:digits="0123456789."
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:singleLine="true"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/result_ppm"
                        style="@style/TextViewDefaultStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:id="@+id/calculate_ppm"
                        style="@style/ButtonDefaultStyle"
                        android:layout_width="wrap_content"
                        android:text="@string/calculate_ppm_simple"/>
                </LinearLayout>
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/avg_points"
                    android:orientation="horizontal">
                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|start">
                    <Button
                        android:id="@+id/load_ppm_curve"
                        style="@style/ButtonDefaultStyle"
                        android:layout_width="wrap_content"
                        android:text="@string/load_avgs_from_file"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|end">
                    <Button
                        android:id="@+id/save_ppm_curve"
                        style="@style/ButtonDefaultStyle"
                        android:layout_width="wrap_content"
                        android:text="@string/save_avgs_from_file"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>