<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_background"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridView
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="@dimen/text_margin_default"
                android:background="@color/grid_color"
                android:horizontalSpacing="1dp"
                android:numColumns="6"
                android:stretchMode="columnWidth"
                android:verticalSpacing="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttons_layout"
                android:visibility="gone">

                <Button
                    android:id="@+id/simple_ppm_btn_addRow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add row" />

                <Button
                    android:id="@+id/generate_csv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Generate table (table.csv)"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/solve_line_equation_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/text_margin_default"
                android:gravity="center_vertical"
                android:visibility="gone">

                <Button
                    android:id="@+id/solve_line_equation"
                    style="@style/ButtonDefaultStyle"
                    android:layout_width="wrap_content"
                    android:text="@string/solve_equation"/>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/solve_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="false"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/solved_formula"
                        style="@style/TextViewDefaultStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/calculate_ppm_simple_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_default"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewDefaultStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_avg_square"/>

                    <EditText
                        android:id="@+id/avg_value"
                        style="@style/EditTextDefaultStyle"
                        android:layout_width="match_parent"
                        android:digits="0123456789."
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:singleLine="true"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/result_ppm_simple"
                        style="@style/TextViewDefaultStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:id="@+id/calculate_ppm_simple"
                        style="@style/ButtonDefaultStyle"
                        android:layout_width="wrap_content"
                        android:text="@string/calculate_ppm_simple"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>